# hsds

./: CMakeLists.txt  README.md  arm32.cmake
3rd/lib/: gmock_main.lib  gtest.exp
include/: hsbuf.h  hsdef.h  hslist.h  hsrq.h  hstool.h
src/: CMakeLists.txt  hsbuf.c  hslist.c  hsrq.c  hstool.c
test/: CMakeLists.txt  CMakeLists_ctest.txt  testbuf_ctest.cc  testbuf_gtest.cc  testrq.c
test/3rd/lib/linux_x64/: libgmock.so.1.12.1  libgmock_main.so.1.12.1  libgtest.so.1.12.1  libgtest_main.so.1.12.1
test/3rd/lib/win64/: gmock.exp  gmock.lib  gmock_main.exp  gtest.lib  gtest_main.exp  gtest_main.lib
